implement jwt authentication for department, division and role

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-secret = "secret"
-issuer = "http://0.0.0.0:8080/"
-audience = "http://0.0.0.0:8080/hello"
-realm = "Access to 'hello'"
+jwt_secret = "LeaveApp2023BtsId"
+jwt_issuer = "https://lacewing-humorous-allegedly.ngrok-free.app"
+jwt_audience = "https://lacewing-humorous-allegedly.ngrok-free.app/user"
+jwt_realm = "Leave App Access to API Service"
