Add submitted leave request list

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,3 +2,13 @@ jwt_secret = "LeaveApp2023BtsId"
 jwt_issuer = "https://lacewing-humorous-allegedly.ngrok-free.app"
 jwt_audience = "https://lacewing-humorous-allegedly.ngrok-free.app/user"
 jwt_realm = "Leave App Access to API Service"
+
+db_url = "jdbc:postgresql:db_leave_app"
+db_driver = "org.postgresql.Driver"
+db_user = "postgres"
+db_password = "dhony123"
+
+db_url_online = "jdbc:postgresql://bubble.db.elephantsql.com:5432/pvhfrxwt"
+db_driver_online = "org.postgresql.Driver"
+db_user_online = "pvhfrxwt"
+db_password_online = "ky1wD1SqtG9IZLZpc6PHC2NvXyY-R30L"
