Add push notification feature

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ mysql_connector_version=8.1.0
 exposed_version=0.43.0
 postgresql_version=42.6.0
 jbcrypt_version=0.4
+firebase_admin=8.0.1
 hikari_version=5.0.1
 logback_version=1.4.11
 kotlin.code.style=official
