--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,3 +12,5 @@ db_url_online = "jdbc:postgresql://bubble.db.elephantsql.com:5432/pvhfrxwt"
 db_driver_online = "org.postgresql.Driver"
 db_user_online = "pvhfrxwt"
 db_password_online = "ky1wD1SqtG9IZLZpc6PHC2NvXyY-R30L"
+
+firebase_admin_sdk_file_name = "firebase-admin-sdk.json"
