--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
-    id 'io.ktor.plugin' version "$ktor_version"
-    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
+  id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+  id 'io.ktor.plugin' version "$ktor_version"
+  id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
 }
 
 group "id.bts"
@@ -12,23 +12,24 @@ def isDevelopment = project.ext.has("development")
 applicationDefaultJvmArgs = ["-Dio.ktor.development=$isDevelopment"]
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    implementation "io.ktor:ktor-server-core-jvm"
-    implementation "io.ktor:ktor-server-netty-jvm"
-    implementation "io.ktor:ktor-server-content-negotiation"
-    implementation "io.ktor:ktor-serialization-kotlinx-json"
-    implementation "io.ktor:ktor-server-auth"
-    implementation "io.ktor:ktor-server-auth-jwt"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
-    implementation "org.ktorm:ktorm-core:$ktorm_version"
-    implementation "org.postgresql:postgresql:$postgresql_version"
-    implementation "org.ktorm:ktorm-support-postgresql:$ktorm_version"
-    implementation "org.ktorm:ktorm-support-mysql:$ktorm_version"
-    implementation "org.mindrot:jbcrypt:$jbcrypt_version"
-    implementation "ch.qos.logback:logback-classic:$logback_version"
-    testImplementation "io.ktor:ktor-server-tests-jvm"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+  implementation "io.ktor:ktor-server-core-jvm"
+  implementation "io.ktor:ktor-server-netty-jvm"
+  implementation "io.ktor:ktor-server-content-negotiation"
+  implementation "io.ktor:ktor-serialization-kotlinx-json"
+  implementation "io.ktor:ktor-server-auth"
+  implementation "io.ktor:ktor-server-auth-jwt"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+  implementation "org.ktorm:ktorm-core:$ktorm_version"
+  implementation "org.postgresql:postgresql:$postgresql_version"
+  implementation "org.ktorm:ktorm-support-postgresql:$ktorm_version"
+  implementation "org.ktorm:ktorm-support-mysql:$ktorm_version"
+  implementation "org.mindrot:jbcrypt:$jbcrypt_version"
+  implementation "com.google.firebase:firebase-admin:$firebase_admin"
+  implementation "ch.qos.logback:logback-classic:$logback_version"
+  testImplementation "io.ktor:ktor-server-tests-jvm"
+  testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
