--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,6 @@
+application_port = "8080"
+application_host = "0.0.0.0"
+
 jwt_secret = "LeaveApp2023BtsId"
 jwt_issuer = "https://lacewing-humorous-allegedly.ngrok-free.app"
 jwt_audience = "https://lacewing-humorous-allegedly.ngrok-free.app/user"
