--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
   implementation "io.ktor:ktor-serialization-kotlinx-json"
   implementation "io.ktor:ktor-server-auth"
   implementation "io.ktor:ktor-server-auth-jwt"
+  implementation "io.ktor:ktor-server-websockets"
+  implementation "io.ktor:ktor-server-sessions"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
   implementation "org.ktorm:ktorm-core:$ktorm_version"
   implementation "org.postgresql:postgresql:$postgresql_version"
