Add forgot password route with otb [todo: send email implementation]

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,8 @@ jwt_issuer = "https://lacewing-humorous-allegedly.ngrok-free.app"
 jwt_audience = "https://lacewing-humorous-allegedly.ngrok-free.app/user"
 jwt_realm = "Leave App Access to API Service"
 
+jwt_secret_forgot_password = "LeaveApp2023BtsId-ForgotPassword"
+
 db_url = "jdbc:postgresql:db_leave_app"
 db_driver = "org.postgresql.Driver"
 db_user = "postgres"
