--- a/src/main/resources/application_example.conf
+++ b/src/main/resources/application_example.conf
@@ -2,6 +2,7 @@ application_port = "<Example: 80>"
 application_host = "<Example: 0.0.0.0>"
 
 jwt_secret = "<Your JWT Secret>"
+jwt_secret_forgot_password = "<Your JWT Secret for Forgot Password>"
 jwt_issuer = "<Your JWT Issuer>"
 jwt_audience = "<Your JWT Audience>"
 jwt_realm = "<Your JWT Realm>"
